--- a/test/test_template.html
+++ b/test/test_template.html
@@ -16,7 +16,7 @@
 
       <h2>Statistics</h2><br/>
 {%      for graph in get_graphs(data) %}
-{%       if not graph is sameas false %}
+{%       if graph %}
 {#   graph = (title, image)           #}
           <p>
            <pre><gtitle>{{ graph[0] }}</gtitle></pre>
