--- a/t4mon/conf/template.html
+++ b/t4mon/conf/template.html
@@ -16,8 +16,8 @@
       <p>Information for the following system is shown: <strong>{{ data.system }}</strong></p>
 
       <h2>Statistics</h2><br/>
-{%      for graph in render_graphs(data) %}
-{%       if not graph is sameas false %}
+{%      for graph in render_graphs() %}
+{%       if graph %}
 {#   graph = (title, image)           #}
           <p>
            <pre><gtitle>{{ graph[0] }}</gtitle></pre>
